--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Collection\\": "src/",
-      "CollectionTest\\": "tests/"
+      "Edinet\\": "src/",
+      "EdinetTest\\": "tests/"
     }
   }
 }
